change how we're removing inner shadow on ios, update reset styles based on bootstrap updates (things that were fixed by normalize)

--- a/scss/ui/_forms.scss
+++ b/scss/ui/_forms.scss
@@ -31,7 +31,9 @@ input[type="checkbox"] {
 }
 
 // Set the size of file controls to match text inputs
-input[type="file"] {
+// Make range inputs behave like textual form controls
+input[type="file"],
+input[type="range"] {
   display: block;
   width: 100%;
 }
@@ -42,27 +44,11 @@ select[size] {
   height: auto;
 }
 
-// Fix optgroup Firefox bug per https://github.com/twbs/bootstrap/issues/7611
-select optgroup {
-  font-size: inherit;
-  font-style: inherit;
-  font-family: inherit;
-}
-
 // Focus for file, radio, and checkbox
 input[type="file"]:focus,
 input[type="radio"]:focus,
 input[type="checkbox"]:focus {
   @include tab-focus();
-}
-
-// Fix for Chrome number input
-// Setting certain font-sizes causes the `I` bar to appear on hover of the bottom increment button. See https://github.com/twbs/bootstrap/issues/8350
-input[type="number"] {
-  &::-webkit-outer-spin-button,
-  &::-webkit-inner-spin-button {
-    height: auto;
-  }
 }
 
 
@@ -124,11 +110,10 @@ textarea.form-control {
   height: auto;
   line-height: $line-height-ratio;
 }
-// Remove inner shadow on webkit and mobile firefox
+// Remove inner shadow on webkit, see http://zomigi.com/blog/bug-fixes-for-removing-the-inner-shadow-on-ios-inputs
 input.form-control,
 textarea.form-control {
-  -webkit-appearance: caret;
-  -moz-appearance: caret;
+  background-image: -webkit-linear-gradient(hsla(0,0%,100%,0), hsla(0,0%,100%,0));
 }
 
 
